test/spec/address.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/address.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/address.wast:34:63: offset must be less than or equal to 0xffffffff
...memory 1) (func $bad1 (param $i i32) (i32.load offset=4294967296 (get_loca...
                                        ^
called import spectest.print(i32:97)
called import spectest.print(i32:98)
called import spectest.print(i32:99)
called import spectest.print(i32:122)
called import spectest.print(i32:25185)
called import spectest.print(i32:25185)
called import spectest.print(i32:25442)
called import spectest.print(i32:25699)
called import spectest.print(i32:122)
called import spectest.print(i32:1684234849)
called import spectest.print(i32:1701077858)
called import spectest.print(i32:1717920867)
called import spectest.print(i32:122)
$invoke_0() 
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
$invoke_1() 
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
called import spectest.print(i32:0)
3/3 tests passed.
;;; STDOUT ;;)
